# rpsbattle

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: curriculum.md  rubric.md  testing-strategy.md
docs/lessons/: lesson-01.md
docs/reports/: 2026-02.md  MONTHLY_REPORT_TEMPLATE.md
docs/session-logs/: 2026-02-08-game-kickoff.md  2026-02-08-planning.md  2026-02-16-origin-of-chaos.md  2026-02-16-starting-point.md  2026-02-28-exploratory-build.md  TEMPLATE.md
src/sim/: __init__.py  app.py  board.py  cli.py  config.py  creature.py  game.py  geometry.py  render.py  rps.py
tests/: test_app.py  test_board.py  test_cli.py  test_game.py  test_render_smoke.py  test_rps.py
